Add/show statistics visualizations

--- a/public/templates/discover/discover.html
+++ b/public/templates/discover/discover.html
@@ -15,7 +15,7 @@
     show-filter-bar="tabView !== 'cluster-monitoring'"
     show-query-input="tabView !== 'cluster-monitoring'"
     show-date-picker="indexPattern.isTimeBased()"
-    show-save-query="showSaveQuery && tabView !== 'cluster-monitoring'"
+    show-save-query="tabView !== 'cluster-monitoring'"
     use-default-behaviors="true"
   >
   </wz-top-nav>
