Fix responsive version in devtools

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1635,3 +1635,28 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
   padding: 10px;
   border:none;
 }
+
+iframe.width-changed {
+  width: 100%;
+  display: block;
+  border: 0;
+  height: 0;
+  margin: 0;
+}
+
+.selectDevTools {
+  display: none;
+}
+
+.marginAddTab {
+  padding-bottom: 5px;
+}
+
+@media only screen and (max-width: 1200px) { 
+ .wideElementsDevTools {
+    display: none;
+  }
+  /* .selectDevTools {
+    display: inline;
+  } */
+} 
