--- a/public/directives/wz-multiple-selector/wz-multiple-selector.less
+++ b/public/directives/wz-multiple-selector/wz-multiple-selector.less
@@ -36,19 +36,26 @@
     width: 100px;
     float: left;
     text-align: center;
-    height: 300px;
+    height: 400px;
     display: grid;
 }
 
 .wzMultipleSelectorButtons button{
     margin: 5px;
-    height: 67px;
+    height: 75px;
 }
 
 .wzMultipleSelectorLeft, .wzMultipleSelectorRight{
-    margin: 0 15px;
-    width: calc(~"50% - 80px");
+    width: calc(~"50% - 65px");
     float: left;
+}
+
+.wzMultipleSelectorRight{
+    margin: 0 0 0 15px;
+}
+
+.wzMultipleSelectorLeft{
+    margin: 0 15px 0 0;
 }
 
 .wzMultipleSelector .panel-body{
