--- a/public/templates/management/groups/groups.html
+++ b/public/templates/management/groups/groups.html
@@ -5,13 +5,17 @@
         - add 'Manage agents' section to the Groups component
     -->
 
-    <div class="euiPage" style="background: transparent;" ng-init="gp.lookingGroup=false">
+    <div ng-if="gp.currentGroup && gp.addingAgents">
+        <react-component name="MultipleAgentSelector" props="gp.multipleAgentSelectorProps" ng-init="gp.groupsSelectedTab='agents'"></react-component>
+    </div>
+
+<!--     <div class="euiPage" style="background: transparent;" ng-init="gp.lookingGroup=false">
         <div class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive">
             <div class="euiFlexItem">
                 <div class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                     ng-show="gp.load">
                     <div class="euiFlexItem">
-                        <react-component name="EuiProgress" props="{size: 'xs', color: 'primary'}" ></react-component>
+                        <react-component name="EuiProgress" props="{size: 'xs', color: 'primary'}"></react-component>
                         <div class="euiSpacer euiSpacer--l"></div>
                     </div>
                 </div>
@@ -46,8 +50,8 @@
                                 <div class="euiFlexItem"></div>
                                 <div class="euiFlexItem euiFlexItem--flexGrowZero">
                                     <button ng-hide='moreThan500' ng-click='gp.saveAddAgents()'
-                                        class="euiButton euiButton--primary euiButton--fill" type="button" ng-disabled='gp.moreThan500'><span
-                                            class="euiButton__content">
+                                        class="euiButton euiButton--primary euiButton--fill" type="button"
+                                        ng-disabled='gp.moreThan500'><span class="euiButton__content">
                                             <span class="euiButton__text">Apply changes</span></span></button>
                                     <span class='error-msg' ng-show='gp.moreThan500'><i
                                             class="fa fa-exclamation-triangle"></i>
@@ -61,14 +65,7 @@
                                     <span ng-show='!gp.multipleSelectorLoading' class="wzMultipleSelectorCounter"><span
                                             style='color:green'>+{{gp.currentAdding}}</span>&nbsp;
                                         <span style='color:red'>-{{gp.currentDeleting}}</span></span>
-                                    <wz-multiple-selector class='wzMultipleSelector'
-                                        available-items="gp.availableAgents.data"
-                                        selected-items="gp.selectedAgents.data" title-available-items="Available agents"
-                                        title-selected-items="Current agents in the group"
-                                        total-selected-items="gp.totalSelectedAgents"
-                                        reload-scroll='gp.reload(element, searchTerm, start)'
-                                        limit="gp.checkLimit()">
-                                    </wz-multiple-selector>
+
                                     <div class="euiSpacer euiSpacer--l"></div>
                                 </div>
                             </div>
@@ -77,5 +74,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
