Remove old angular directive

--- a/public/templates/management/groups/groups.html
+++ b/public/templates/management/groups/groups.html
@@ -4,75 +4,8 @@
         - remove GroupsPreviewController
         - add 'Manage agents' section to the Groups component
     -->
-
     <div ng-if="gp.currentGroup && gp.addingAgents">
-        <react-component name="MultipleAgentSelector" props="gp.multipleAgentSelectorProps" ng-init="gp.groupsSelectedTab='agents'"></react-component>
+        <react-component name="MultipleAgentSelector" props="gp.multipleAgentSelectorProps"
+            ng-init="gp.groupsSelectedTab='agents'"></react-component>
     </div>
-
-<!--     <div class="euiPage" style="background: transparent;" ng-init="gp.lookingGroup=false">
-        <div class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive">
-            <div class="euiFlexItem">
-                <div class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
-                    ng-show="gp.load">
-                    <div class="euiFlexItem">
-                        <react-component name="EuiProgress" props="{size: 'xs', color: 'primary'}"></react-component>
-                        <div class="euiSpacer euiSpacer--l"></div>
-                    </div>
-                </div>
-                <div class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
-                    ng-init="gp.groupsSelectedTab='agents'" ng-if="gp.currentGroup && gp.addingAgents">
-                    <div class="euiFlexItem" ng-show="!gp.load">
-                        <div class="euiPanel euiPanel--paddingMedium">
-                            <div
-                                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive">
-                                <div class="euiFlexItem">
-                                    <div
-                                        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive">
-                                        <div class="euiFlexItem euiFlexItem--flexGrowZero"><span
-                                                class="euiToolTipAnchor">
-                                                <button class="euiButtonIcon euiButtonIcon--primary"
-                                                    ng-click='gp.cancelButton()' type="button" aria-label="Back"><svg
-                                                        width="16" height="16" viewBox="0 0 16 16"
-                                                        xmlns="http://www.w3.org/2000/svg"
-                                                        class="euiIcon euiIcon--large euiIcon-isLoaded euiButtonIcon__icon"
-                                                        focusable="false" aria-hidden="true">
-                                                        <path fill-rule="nonzero"
-                                                            d="M10.843 13.069L6.232 8.384a.546.546 0 0 1 0-.768l4.61-4.685a.552.552 0 0 0 0-.771.53.53 0 0 0-.759 0l-4.61 4.684a1.65 1.65 0 0 0 0 2.312l4.61 4.684a.53.53 0 0 0 .76 0 .552.552 0 0 0 0-.771z">
-                                                        </path>
-                                                    </svg></button></span></div>
-                                        <div class="euiFlexItem euiFlexItem--flexGrowZero">
-                                            <h1 class="euiTitle euiTitle--medium">Manage agents of group
-                                                {{gp.currentGroup.name}}
-                                            </h1>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="euiFlexItem"></div>
-                                <div class="euiFlexItem euiFlexItem--flexGrowZero">
-                                    <button ng-hide='moreThan500' ng-click='gp.saveAddAgents()'
-                                        class="euiButton euiButton--primary euiButton--fill" type="button"
-                                        ng-disabled='gp.moreThan500'><span class="euiButton__content">
-                                            <span class="euiButton__text">Apply changes</span></span></button>
-                                    <span class='error-msg' ng-show='gp.moreThan500'><i
-                                            class="fa fa-exclamation-triangle"></i>
-                                        It is not possible to apply changes of more than 500 additions or
-                                        deletions</span>
-                                </div>
-                            </div>
-                            <div ng-if="gp.addingAgents"
-                                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive">
-                                <div class="euiFlexItem" style="margin-top: 30px;">
-                                    <span ng-show='!gp.multipleSelectorLoading' class="wzMultipleSelectorCounter"><span
-                                            style='color:green'>+{{gp.currentAdding}}</span>&nbsp;
-                                        <span style='color:red'>-{{gp.currentDeleting}}</span></span>
-
-                                    <div class="euiSpacer euiSpacer--l"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
 </div>
