--- a/public/components/management/groups/multiple-agent-selector.less
+++ b/public/components/management/groups/multiple-agent-selector.less
@@ -36,19 +36,26 @@
     width: 100px;
     float: left;
     text-align: center;
-    height: 300px;
+    height: 400px;
     display: grid;
 }
 
 .wzMultipleSelectorButtons button{
     margin: 5px;
-    height: 67px;
+    height: 75px;
 }
 
 .wzMultipleSelectorLeft, .wzMultipleSelectorRight{
-    margin: 0 15px;
-    width: calc(~"50% - 80px");
+    width: calc(~"50% - 65px");
     float: left;
+}
+
+.wzMultipleSelectorRight{
+    margin: 0 0 0 15px;
+}
+
+.wzMultipleSelectorLeft{
+    margin: 0 15px 0 0;
 }
 
 .wzMultipleSelector .panel-body{
@@ -58,12 +65,6 @@
 .wzMultipleSelector select{
     border-color: #e0e0e0;
     margin-top: 15px;
-}
-
-.wzMultipleSelectorCounter{
-    position: absolute;
-    right: 35px;
-    padding: 15px;
 }
 
 .wzMultipleSelectorAdding{
