more work in module guides: added display_name prop, fixes and improvements in module-guide component

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1459,6 +1459,11 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
   max-width: 60vw;
 }
 
+.wz-modal-expanded {
+  max-width: 60vw;
+  width: 60vw;
+}
+
 .wz-markdown-wapper code {
   color: #1c2226;
   background-color: #e6e6e6;
@@ -1483,6 +1488,11 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
 @media (max-width: 1300px) {
   .wz-select-agent-modal {
     max-width: 80vw;
+  }
+
+  .wz-modal-expanded {
+    max-width: 80vw;
+    width: 80vw;
   }
 
   /* Change custom discover size */
