--- a/public/templates/visualize/dashboards.html
+++ b/public/templates/visualize/dashboards.html
@@ -66,7 +66,7 @@
             <!-- End report status section -->
             <div ng-if="octrl.tab && octrl.tab!=='welcome'"
                 ng-show="octrl.tabView === 'panels'">
-                <div ng-class="{'no-opacity': !moduleDiscoverReady}">
+                <div ng-if='octrl.tabView === "panels"' ng-class="{'no-opacity': !moduleDiscoverReady}">
                     <react-component ng-show='showModuleDashboard' name="WzVisualize"
                         props="getVisualizeProps(resultState)" ></react-component>
                 </div>
