--- a/public/templates/discover/discover.html
+++ b/public/templates/discover/discover.html
@@ -11,11 +11,11 @@
     query="state.query"
     saved-query-id="state.savedQuery"
     screen-title="screenTitle"
+    show-date-picker="indexPattern.isTimeBased()"
+    show-save-query="showSaveQuery && tabView !== 'cluster-monitoring'"
     show-search-bar="tabView"
     show-filter-bar="tabView !== 'cluster-monitoring'"
     show-query-input="tabView !== 'cluster-monitoring'"
-    show-date-picker="indexPattern.isTimeBased()"
-    show-save-query="showSaveQuery && tabView !== 'cluster-monitoring'"
     use-default-behaviors="true"
   >
   </wz-top-nav>
@@ -61,100 +61,37 @@
             fetch-error="fetchError"
           ></discover-fetch-error>
 
-          <div ng-hide="fetchError" class="dscOverlay">
-            <h2
-              i18n-id="kbn.discover.searchingTitle"
-              i18n-default-message="Searching"
-              class="euiTitle euiTitle--small"
-            ></h2>
-            <div class="euiSpacer euiSpacer--m"></div>
-            <div
-              class="euiLoadingSpinner euiLoadingSpinner--large"
-              data-test-subj="loadingSpinner"
-            ></div>
-          </div>
+          <loading-spinner ng-hide="fetchError" class="dscOverlay"></loading-spinner>
         </div>
 
         <div class="dscWrapper__content" ng-show="resultState === 'ready'">
           <!-- result -->
           <div class="dscResults">
-            <button
-              class="kuiButton kuiButton--basic kuiButton--iconText dscSkipButton"
-              ng-click="showAllRows(); scrollToBottom()"
-            >
-              <span class="kuiButton__inner">
-                <span aria-hidden="true" class="kuiButton__icon kuiIcon fa-chevron-down"></span>
-                <span
-                  i18n-id="kbn.discover.skipToBottomButtonLabel"
-                  i18n-default-message="Skip to bottom"
-                ></span>
-              </span>
-            </button>
+            <skip-bottom-button on-click="onSkipBottomButtonClick"></skip-bottom-button>
 
-            <div class="dscResultCount">
-              <strong data-test-subj="discoverQueryHits">{{(hits || 0) | number:0}}</strong>
-              <span
-                class="dscResultHits"
-                i18n-id="kbn.discover.hitsPluralTitle"
-                i18n-default-message="{hits, plural, one {hit} other {hits}}"
-                i18n-values="{ hits }"
-              ></span>
-              <button
-                ng-if="opts.savedSearch.id"
-                class="kuiLink"
-                type="button"
-                id="reload_saved_search"
-                data-test-subj="resetSavedSearch"
-                ng-click="resetQuery()"
-              >
-                {{::'kbn.discover.reloadSavedSearchButton' | i18n: {defaultMessage: 'Reset search'} }}
-              </button>
-            </div>
+            <hits-counter
+              hits="hits || 0"
+              show-reset-button="opts.savedSearch.id"
+              on-reset-query="resetQuery"
+            >
+            </hits-counter>
 
             <section
-              aria-label="{{::'kbn.discover.histogramOfFoundDocumentsAriaLabel' | i18n: {defaultMessage: 'Histogram of found documents'} }}"
+              aria-label="{{::'discover.histogramOfFoundDocumentsAriaLabel' | i18n: {defaultMessage: 'Histogram of found documents'} }}"
               class="dscTimechart"
               ng-if="opts.timefield"
             >
-              <header class="dscTimechart__header">
-                <div class="small">
-                  <label
-                    for="dscResultsIntervalSelector"
-                    tooltip="{{::'kbn.discover.howToChangeTheTimeTooltip' | i18n: {defaultMessage: 'To change the time, click the calendar icon in the navigation bar'} }}"
-                  >
-                    {{toMoment(timeRange.from)}} - {{toMoment(timeRange.to)}}
-                  </label>
-
-                  &mdash;
-
-                  <span class="form-inline">
-                    <select
-                      id="dscResultsIntervalSelector"
-                      class="dscResults__interval form-control"
-                      ng-model="state.interval"
-                      ng-options="interval.val as interval.display for interval in intervalOptions | filter: intervalEnabled"
-                      ng-blur="toggleInterval()"
-                      data-test-subj="discoverIntervalSelect"
-                    >
-                    </select>
-                    <span ng-if="bucketInterval.scaled">
-                      <icon-tip
-                        content="getBucketIntervalToolTipText()"
-                        position="'top'"
-                      ></icon-tip>
-                      <span
-                        data-test-subj="discoverIntervalSelectScaledToDesc"
-                        i18n-id="kbn.discover.scaledToDescription"
-                        i18n-default-message="Scaled to {bucketIntervalDescription}"
-                        i18n-values="{
-                          bucketIntervalDescription: bucketInterval.description
-                        }"
-                      ></span>
-                    </span>
-                  </span>
-                </div>
-
-              </header>
+              <timechart-header 
+                from="toMoment(timeRange.from)"
+                to="toMoment(timeRange.to)" 
+                options="intervalOptions" 
+                on-change-interval="changeInterval" 
+                state-interval="state.interval"
+                show-scaled-info="bucketInterval.scaled"
+                bucket-interval-description="bucketInterval.description"
+                bucket-interval-scale="bucketInterval.scale"
+              >
+              </timechart-header>
 
               <discover-histogram
                 class="dscHistogram"
@@ -173,7 +110,7 @@
             >
               <h2 class="euiScreenReaderOnly"
                 id="documentsAriaLabel"
-                i18n-id="kbn.discover.documentsAriaLabel"
+                i18n-id="discover.documentsAriaLabel"
                 i18n-default-message="Documents"
               ></h2>
               <doc-table
@@ -195,14 +132,15 @@
                 on-remove-column="removeColumn"
               ></doc-table>
 
-              <a tabindex="0" id="discoverBottomMarker"></a>
+              <a tabindex="0" id="discoverBottomMarker">&#8203;</a>
 
               <div
                 ng-if="rows.length == opts.sampleSize"
                 class="dscTable__footer"
+                data-test-subj="discoverDocTableFooter"
               >
                 <span
-                  i18n-id="kbn.discover.howToSeeOtherMatchingDocumentsDescription"
+                  i18n-id="discover.howToSeeOtherMatchingDocumentsDescription"
                   i18n-default-message="These are the first {sampleSize} documents matching
                   your search, refine your search to see others. "
                   i18n-values="{
@@ -212,7 +150,7 @@
                 <a
                   kbn-accessible-click
                   ng-click="scrollToTop()"
-                  i18n-id="kbn.discover.backToTopLinkText"
+                  i18n-id="discover.backToTopLinkText"
                   i18n-default-message="Back to top."
                 ></a>
               </div>
