--- a/public/less/common.less
+++ b/public/less/common.less
@@ -495,14 +495,18 @@ md-sidenav {
   color: #b4bcc2;
 }
 
+.conApp .euiProgress{
+  z-index: 2000;
+}
+
 .wz-dev-column-separator {
-  width: 12px;
-  margin-top: 15px;
-  background: #dddddd;
+  width: 14px;
+  text-align: center;
+  background: #fafbfd;
   float: left;
   cursor: ew-resize;
-  text-align: center;
-  display: block !important;
+  display: table!important;
+  height: 100%;
 }
 
 .wz-dev-column-separator:hover {
@@ -1585,4 +1589,49 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
 
 .no-focus:focus {
   background-color: transparent !important;
+}
+
+
+.ace_scrollbar-v {
+  margin-top: -10px!important;
+}
+.ace_autocomplete {
+  width: 390px!important;
+}
+
+.wz-devtools {
+  border: 1px solid red;
+  margin: 16px;
+}
+.wz-devtools-tab .euiButtonEmpty__text {
+  height:24px;
+  text-decoration: none !important;
+}
+
+
+.history-list {
+  background-color: white;
+  border:  1px solid #80808061;
+  max-height: 25vh;
+  overflow: auto;
+  border-radius: 5px;
+}
+
+.history-list-item {
+  padding: 10px;
+  font-size: 14px;
+  border-bottom: 1px solid #80808061 ;
+}
+
+.history-list-item:hover {
+  background-color:#a4a0e11a;
+}
+
+.history-list-item-active {
+  background-color:#a09dd326 !important;
+}
+
+.history-list-item:last-child {
+  padding: 10px;
+  border:none;
 }
