Fix several layout errors

--- a/public/components/wz-menu/wz-menu.less
+++ b/public/components/wz-menu/wz-menu.less
@@ -114,7 +114,16 @@ wz-menu {
     z-index: 8!important;
 }
 
+.wz-menu-overview {
+    min-width: 700px;
+}
+
 @media only screen and (max-width: 767px){
+
+    .wz-menu-overview {
+        min-width: auto;
+    }
+
     .wz-menu-select{
         max-width: 20px !important;
     }
