--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1581,3 +1581,7 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu
     display: none;
   }
 }
+
+.module-table .euiFacetButton__text {
+  max-height: 40px;
+}
