Restore old devtools

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -500,13 +500,13 @@ md-sidenav {
 }
 
 .wz-dev-column-separator {
-  width: 14px;
-  text-align: center;
-  background: #fafbfd;
+  width: 12px;
+  margin-top: 15px;
+  background: #dddddd;
   float: left;
   cursor: ew-resize;
-  display: table!important;
-  height: 100%;
+  text-align: center;
+  display: block !important;
 }
 
 .wz-dev-column-separator:hover {
