Revert "Migrate Health check to React (#2399)"
This reverts commit 00e93a478bae7baa0126aa7735a58b55f24acf5f.

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1014,9 +1014,6 @@ wz-xml-file-editor {
 
 .health-check{
   padding-top: 5%;
-  width: 500px;
-  margin: 0 auto;
-  text-align: center;
 }
 
 @keyframes rotation {
@@ -1035,16 +1032,14 @@ wz-xml-file-editor {
 }
 
 .health-check-logo{
-  width: 80px;
-  height: 80px;
-  margin-bottom: 20px;
-  z-index: 1;
-  filter: brightness(0) saturate(100%) invert(24%) sepia(97%) saturate(1757%) hue-rotate(186deg) brightness(94%) contrast(101%);
-  margin-left: -100px;
-}
-
-.health-check .euiDescriptionList__description{
-  text-align: left!important;
+    width: 60px;
+    height: 60px;
+    float: left;
+    margin: 0 auto;
+    margin-top: -90px;
+    margin-bottom: 50px;
+    z-index: 1;
+    filter: brightness(0) saturate(100%) invert(24%) sepia(97%) saturate(1757%) hue-rotate(186deg) brightness(94%) contrast(101%);
 }
 
 .CodeMirror-gutters {
