Fix overflow in viewers of Settings/Logs and Mananagement/Logs:   - Added a container to EuiCodeBlock with an style to limit the max width.   - Ajusted 'offset' variable in WzLogs component

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1660,3 +1660,7 @@ iframe.width-changed {
     display: inline;
   } */
 } 
+
+.code-block-log-viewer-container{
+  max-width: calc(~"100vw - 41*2px");
+}
