--- a/public/templates/tools/dev-tools.html
+++ b/public/templates/tools/dev-tools.html
@@ -2,9 +2,19 @@
     <md-content flex layout="column" class="md-padding" layout-align="start">	
         <div class="wz-dev-box">	
             <div id="wz-dev-left-column" flex layout="column">	
-                <span class="wz-headline-title wz-dev-title">Console <i ng-click="ctrl.send()"	
+                <span class="wz-headline-title wz-dev-title">Console <i ng-click="ctrl.send()"
+                        title="Click to send the request"
                         class="fa fa-play wz-play-dev-color cursor-pointer pull-right fa-fw wz-always-top"	
-                        id="play_button" aria-hidden="true"></i></span>	
+                        id="play_button" aria-hidden="true"></i>
+                        <a 
+                            href=""
+                            target="__blank"
+                            title="Open documentation"
+                            class="fa fa-info-circle cursor-pointer pull-right fa-fw wz-always-top"	
+                            id="wazuh_dev_tools_documentation">
+                        </a>
+                    </span>
+                
                 <textarea flex id="api_input"></textarea>	
             </div>	
             <div class="wz-dev-column-separator layout-column"><span>︙</span></div>	
