Added css rule to truncate discover field details

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1668,6 +1668,10 @@ iframe.width-changed {
   max-height: 40px;
 }
 
-.code-block-log-viewer-container{
+.code-block-log-viewer-container {
   max-width: calc(~"100vw - 41*2px");
+}
+
+.dscFieldDetails__barContainer {
+  min-width: 0;
 }
