Added index pattern fields refreshing from events

--- a/public/less/component.less
+++ b/public/less/component.less
@@ -106,3 +106,7 @@
     -webkit-filter: drop-shadow( 0px 3px 3px rgba(0,0,0,.5) );
     filter: drop-shadow( 0px 3px 3px rgba(0,0,0,.5) );
 }
+
+kbn-dis doc-table .kbnDocViewer__warning {
+    display: none;
+}
