--- a/public/components/common/globalBreadcrumb/globalBreadcrumb.scss
+++ b/public/components/common/globalBreadcrumb/globalBreadcrumb.scss
@@ -26,7 +26,7 @@
     }
 }
 
-@-moz-document url-prefix() {
+$-moz-document url-prefix() {
     .wz-global-breadcrumb #breadcrumbNoTitle {
         height: auto!important;
     }
