Log suricata and STAP error... Under development...

--- a/public/templates/nids-files/nids-files.pug
+++ b/public/templates/nids-files/nids-files.pug
@@ -1,3 +1,6 @@
 //- include ./nids.head
+include ./nids-commands.head
+include ./nids-files.head
 include ./nids-files.html
+include ./nids-commands.html
 include ../footer.foot
