--- a/public/styles/layout.scss
+++ b/public/styles/layout.scss
@@ -425,8 +425,8 @@ md-dialog.modalTheme .md-button {
 
 .fullscreen {
   z-index: 3000;
-  height: calc(~'100vh - 119px');
-  width: calc(~'100vw - 80px');
+  height: calc('100vh - 119px');
+  width: calc('100vw - 80px');
   position: fixed;
   top: 49px;
   left: 0px;
