--- a/public/styles/common.scss
+++ b/public/styles/common.scss
@@ -534,16 +534,16 @@ md-sidenav {
 }
 
 #wz-dev-left-column {
-  width: calc('30% - 7px');
-  min-width: calc('20% - 7px');
-  max-width: calc('80% - 7px');
+  width: calc(30% - 7px);
+  min-width: calc(20% - 7px);
+  max-width: calc(80% - 7px);
   float: left;
 }
 
 #wz-dev-right-column {
-  width: calc('70% - 7px');
-  min-width: calc('20% - 7px');
-  max-width: calc('80% - 7px');
+  width: calc(70% - 7px);
+  min-width: calc(20% - 7px);
+  max-width: calc(80% - 7px);
   float: left;
 }
 
@@ -1009,7 +1009,7 @@ wz-xml-file-editor {
 }
 
 .registerAgent{
-  min-height: calc('100vh - 100px');
+  min-height: calc(100vh - 100px);
   background: #fafbfd;
 }
 
@@ -1226,7 +1226,7 @@ wz-xml-file-editor {
 }
 
 .logtest-side{
-  height: calc('100vh - 95px');
+  height: calc(100vh - 95px);
   border-left: 1px solid #e1e2e3;
   box-shadow: -2px 0px 2px -1px rgba(152, 162, 179, 0.3);
   margin-top: -50px;
@@ -1234,7 +1234,7 @@ wz-xml-file-editor {
   z-index: 10;
   position : fixed;
   right: 0;
-  width: calc('30% - 16px');
+  width: calc(30% - 16px);
 }
 
 .logtest .euiFlyoutFooter, .logtest-side .euiFlyoutFooter{
@@ -1674,7 +1674,7 @@ iframe.width-changed {
 }
 
 .code-block-log-viewer-container {
-  max-width: calc("100vw - 41*2px");
+  max-width: calc(100vw - 41*2px);
 }
 
 .dscFieldDetails__barContainer {
