React component loaded through Angular controller

--- a/public/templates/agents-prev/agents-prev.old.html
+++ b/public/templates/agents-prev/agents-prev.old.html
@@ -1,4 +1,4 @@
-<div ng-if="!ctrl.init && !ctrl.loading && ctrl.errorInit" class="wz-margin-top-16" layout="column"
+<!-- <div ng-if="!ctrl.init && !ctrl.loading && ctrl.errorInit" class="wz-margin-top-16" layout="column"
     layout-align="start space-around">
     <div flex layout="row" layout-align="center center">
         <div class="euiPanel euiFlexItem wz-margin-10" flex="50" class="wz-md-card" flex>
@@ -30,4 +30,4 @@
         <kbn-dis class='hide-filter-control' ng-show="false"></kbn-dis>
         <react-component name="AgentsPreview" props="{tableProps : ctrl.tableAgentsProps, resultState: resultState}" ></react-component>
     </div>
-</div>
+</div> -->
