--- a/public/templates/agents-prev/agents-prev.html
+++ b/public/templates/agents-prev/agents-prev.html
@@ -1,4 +1,4 @@
-<div ng-cloak flex="auto" ng-controller="agentsPreviewController as ctrl" layout="column">
+<!-- <div ng-cloak flex="auto" ng-controller="agentsPreviewController as ctrl" layout="column">
   <div class="md-padding md-padding-top-16" ng-show="ctrl.init || ctrl.loading">
     <react-component name="EuiProgress" props="{size: 'xs', color: 'primary'}"></react-component>
   </div>
@@ -47,4 +47,6 @@
       ></react-component>
     </div>
   </div>
-</div>
+</div> -->
+
+<react-component name="AgentsPreview" props=""></react-component>
