--- a/public/templates/settings/settings-logs.html
+++ b/public/templates/settings/settings-logs.html
@@ -1,3 +1,3 @@
 <div ng-if="ctrl.tab === 'logs' && !ctrl.load">
-    <react-component name="SettingsLogs" props="ctrl.settingsLogsProps" ></react-component>
+    <react-component name="SettingsLogs" props="{}" ></react-component>
 </div>
