--- a/public/templates/settings/settings.html
+++ b/public/templates/settings/settings.html
@@ -39,7 +39,7 @@
   <div ng-if="ctrl.tab === 'configuration' && !ctrl.load">
     <react-component
       name="WzConfigurationSettings"
-      props="ctrl.settingsTabsProps"
+      props="{}"
     ></react-component>
   </div>
   <!-- end configuration -->
