--- a/public/templates/settings/settings-configuration.html
+++ b/public/templates/settings/settings-configuration.html
@@ -1,3 +1,3 @@
 <div ng-if="ctrl.tab === 'configuration' && !ctrl.load">
-    <react-component name="WzConfigurationSettings" props="ctrl.settingsTabsProps" ></react-component>
+    <react-component name="WzConfigurationSettings" props="{}" ></react-component>
 </div>
