Migrating api and controller

--- a/public/templates/settings/settings.html
+++ b/public/templates/settings/settings.html
@@ -1,4 +1,6 @@
 <!-- head -->
+
+<react-component name="MainSettings" props="{}"></react-component>
 <div ng-cloak ng-controller="settingsController as ctrl">
   <div ng-show="ctrl.load" style="padding: 16px">
     <react-component name="EuiProgress" props="{size: 'xs', color: 'primary'}"></react-component>
