Fixed css of layouts because of conflicts with kibana flyouts

--- a/public/components/common/modules/module.scss
+++ b/public/components/common/modules/module.scss
@@ -23,7 +23,7 @@
     height: 24px;
 }
 
-.euiFlyoutBody .euiFlyoutBody__overflowContent{
+.wzApp .euiFlyoutBody .euiFlyoutBody__overflowContent{
     padding:0!important;
 }
 
