--- a/public/styles/common.scss
+++ b/public/styles/common.scss
@@ -363,7 +363,7 @@ input[type="search"].euiFieldSearch{
   box-shadow: none;
 }
 
-:focus:not(.wz-button):not(.input-filter-box):not(.kuiLocalSearchInput):not(.euiTextArea) {
+:focus:not(.wz-button):not(.input-filter-box):not(.kuiLocalSearchInput):not(.euiTextArea):not(.euiPanel.euiPopover__panel.euiPopover__panel-isOpen) {
   box-shadow: none !important;
 }
 
